--- a/thesite/forum/static/forum/css/style.css
+++ b/thesite/forum/static/forum/css/style.css
@@ -74,7 +74,7 @@ ul.list-articles li {
 .clear {clear: both;}
 
 .header {
-	background: #3F4137;
+	background: #000;
 	height: 60px;
 }
 
@@ -89,7 +89,7 @@ ul.mainmenu {
 	margin: 0;
 	padding: 0;
 	height: 60px;
-	color: #fdc073;
+	color: #fff;
 	font-size: 20px;
 	overflow: hidden;
 }
@@ -101,7 +101,7 @@ ul.mainmenu li.logo {margin: 0;}
 ul.mainmenu li.last {float: right;}
 
 ul.mainmenu li a {
-	color: #fdc073;
+	color: #fff;
 	text-decoration: none;
 }
 ul.mainmenu li a:hover {
